# Data_Structure_and_Algorythms

./: PostFixReport.pages  Repository_link.docx
Convey's LifeGame/LifeGameV1/: lifeGameV1.h  main.cpp
Convey's LifeGame/LifeGameV2/: life.cpp
Convey's LifeGame/LifeGameV3/: Life.cpp  Life.h  main.cpp
Example_code/: 2.cpp  3.cpp
Homeworks/PostFixCalc/: PostFixReport.pages
Homeworks/PostFixCalculator/: CMakeLists.txt  main.cpp
Homeworks/Week5/: Practice2.numbers  T1.cpp  T1a  T1a.cpp  T1b  T1b.cpp  T1c  T1c.cpp  T3.cpp  T4  T4.cpp  tempCodeRunnerFile  tempCodeRunnerFile.cpp
Homeworks/Week5/T5/: CMakeLists.txt  Extended_stack.cpp  Extended_stack.h  T5  T5.cpp  Utility.h
Homeworks/Week6/: 2.numbers
Homeworks/Week6/Exercise1/: CMakeLists.txt  Extended_queue.cpp  Extended_queue.h  Queue.cpp  Queue.h  Utility.cpp  Utility.h  main.cpp
Homeworks/Week6/Exercise3/: CMakeLists.txt  main.cpp
Homeworks/Week6/Exercise4/: CMakeLists.txt  extended_queue.cpp  extended_queue.h  main.cpp  queue.cpp  queue.cpp~  queue.h  queue.h~  stack.cpp  stack.cpp~  stack.h  stack.h~  utility.cpp  utility.cpp~  utility.h
Homeworks/Week7/: CMakeLists.txt  Week7  ex1-2.cpp  main.cpp
Homeworks/week11/: CMakeLists.txt  List.cpp  List.h  main.cpp
Homeworks/week8/: week8_2&4.pages
Homeworks/week8/exercise1/: CMakeLists.txt  main.cpp  node.cpp  node.h
Homeworks/week8/exercise3/: CMakeLists.txt  main.cpp  node.h
Homeworks/week8/exercise5/: CMakeLists.txt  main.cpp  node.cpp  node.h  utility.cpp
Homeworks/week9/exercise1/: Extended_queue.cpp  Extended_queue.h  Queue.cpp  Queue.h  (+2 more)
(+5 files in other folders)
